landing page changed.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="used to store your secured data"
+      content="one of the most secure place on  the internet to store your important documents"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/static/logo_header2.png" />
     <!--
