--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,12 +15,12 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="static/manifest.json" />
+    <link rel="shortcut icon" href="static/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/apple-touch-icon.png"
+      href="static/apple-touch-icon.png"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
