--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CQZGHYTHJH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CQZGHYTHJH');
+</script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
